# hfi-wasmtime-pub

./: Cargo.toml
benches/: instantiation.rs  instantiation_echo.rs  instantiation_fib.rs  instantiation_hash.rs  instantiation_html.rs  instantiation_jpeg.rs  instantiation_tflite.rs  instantiation_utils.rs  instantiation_xml.rs  mpk_pooling.rs  perf.rs
benches/colorguard_capacity_test/: Cargo.toml
benches/colorguard_capacity_test/src/: main.rs
benches/instantiation/: big.wat  toobig.wat
benches/modules/: echo_server.wasm  fib_c.wasm  html_template.wasm  jpeg_resize_c.wasm  msghash_check_c.wasm  xml_to_json.wasm
cranelift/codegen/src/isa/aarch64/inst/: regs.rs
cranelift/codegen/src/isa/x64/inst/: regs.rs
cranelift/codegen/src/legalizer/: heap.rs
crates/colorguard/: Cargo.toml
crates/colorguard/src/: lib.rs  mpk.rs
crates/environ/src/: tunables.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: cow.rs  cow_disabled.rs  memory.rs
crates/runtime/src/instance/: allocator.rs
crates/runtime/src/instance/allocator/: pooling.rs
crates/runtime/src/instance/allocator/pooling/: unix.rs
crates/wasmtime/src/: config.rs  engine.rs  instance.rs  linker.rs  store.rs  trampoline.rs
crates/wasmtime/src/component/: instance.rs
crates/wasmtime/src/module/: serialization.rs
crates/wasmtime/src/trampoline/: memory.rs
crates/wast/src/: wast.rs
growth_bench/: Cargo.toml  benchmark.wasm  benchmark.wat
growth_bench/src/: main.rs
