[package]
name = "colorguard_capacity_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorguard = { workspace = true }
rayon = "1.5.0"
wasmtime = { path = "../../crates/wasmtime" }
wasmtime-wasi = { workspace = true }


